# open-source-playground

./: Cargo.toml  prompt.txt  test.json  test.sql
src/: main.rs
