[package]
name = "data_synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.3.0"
rand = "0.8.5"
bson = "2.6.1"
regex = "1.7.3"
dotenvy = "0.15"
anyhow = "1.0.70"
chrono = "0.4.23"
mongodb = "2.5.0"
postgres = "0.19.5"
actix-web = "4.3.1"
serde_json = "1.0.96"
postgres-types = "0.2.5"
serde = { version = "1.0.137", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres"] }
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "postgres", "time"] }
fake = { version = "2.5", features=['random_color', 'derive', 'chrono', 'http', 'uuid', 'rust_decimal', 'bigdecimal']}